Minor changes to home page + changed "see all past wallpapers" to "see past 50"

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -97,22 +97,15 @@
   Walltaker is
   inspired by the <a href="https://www.wallclaimer.com/">WallClaimer</a> app, which allows you to set the
   wallpaper of your friends phones. This however leads to some weird cases where people post stuff that'd be on
-  your
-  metaphorical blacklist. With that in mind, I wanted it to be restricted to
-  <a href="https://e621.net">e621.net</a>
+  your metaphorical blacklist. With that in mind, I wanted it to be restricted to <a href="https://e621.net">e621.net</a>
   results, with an enforced blacklist. This keeps you in control, but not <em>too much</em> control.
 </p>
 
 <h2 id="what-do-i-need">What do I need?</h2>
 <p>
-  Walltaker requires you to <strong>make an account on the website (here!) first.</strong> Once you have an
-  account, you
-  can generate
-  links to send to friends/enemies, which will enqueue new wallpapers for your account. When you want to start
-  seeing
-  these new wallpapers, <strong>then you can download the companion apps listed below</strong> which is able to
-  listen
-  to wallpaper changes to any
+  Walltaker requires you to <strong>make an account on the website (here!) first.</strong> Once you have an account, you can generate
+  links to send to friends/enemies, which will enqueue new wallpapers for your account. When you want to start seeing
+  these new wallpapers, <strong>then you can download the companion apps listed below</strong> which is able to listen to wallpaper changes to any
   account. Enter your username, and then go about your day!
 </p>
 
@@ -178,8 +171,7 @@
 </table>
 
 <h2 id="extra-apps">Companion/Explorer Apps</h2>
-<p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user
-  experience cleaner.</p>
+<p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user experience cleaner.</p>
 <ul>
   <li><a href="https://github.com/gios2/Walltaker-Explorer/releases/latest" target="_blank">Gio's Explorer</a> (Android)
   </li>
@@ -187,10 +179,10 @@
 
 <h2>Help us out!</h2>
 <p>
-  <%= image_tag 'mascot/TaylorNSFW.png', alt: 'Taylor, a lizard with tits, shaking them at you', class: 'mascot float-right', width: 195 %>
-  We'll be upfront! This site pretty cheap to operate. We have very little in running costs, and I am somewhat OK with
+  <%= image_tag 'mascot/TaylorNSFW.png', alt: 'Taylor, a gray and yellow lizard with tits, shaking them at you', class: 'mascot float-right', width: 195 %>
+  We'll be upfront! The site pretty cheap to operate. We have very little in running costs, and I am somewhat OK with
   paying the ~$40 a month it costs in bandwidth and compute that it takes to keep this service online; however, a few
-  folks have asked if they can help out or compensate our time as a tip, so we set up a kofi!
+  folks have asked if they can help out or compensate our time as a tip, so we set up a Ko-Fi!
 </p>
 
 <a href="https://ko-fi.com/pawcorp" target="_blank" class="kofi-button">
