--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -80,7 +80,7 @@
 
 <% unless @past_links.empty? %>
   <%= link_to past_links_path, class: 'small see-all-past-wallpapers' do %>
-    See all past wallpapers
+    See past 50 wallpapers
     <ion-icon role="presentation" name="arrow-forward"></ion-icon>
   <% end %>
 <% end %>
