I think you meant the instance variable @user, since that's the user for this user page. current_user is the currently auth'd user and is nilable, which broke the not-auth'd state

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
     <% end %>
   </small>
   <small>
-    <% if current_user.username == 'gray' %>
+    <% if @user.username == 'gray' %>
       Caused <%= pluralize @total_orgasms_caused, 'orgasm' %>, technically.
     <% else %>
       Caused <%= pluralize @total_orgasms_caused, 'orgasm' %>
