--- a/public/base.css
+++ b/public/base.css
@@ -1420,21 +1420,19 @@ section .then {
     font-size: 0.7rem;
 }
 
-.hang a {
+.hang a, .hang > div {
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
     gap: 0.25rem;
     text-decoration: none;
+    cursor: pointer;
+    color: var(--accent);
     border: 1px solid var(--accent);
     border-top: none;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     padding: 0.2rem 0.35rem 0.25rem;
-}
-.hang a:hover {
-    filter: brightness(1.4);
-    cursor: pointer;
 }
 
 .mascot-picker {
