Add suppoer for Walltaker eXPerience project

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -158,6 +158,9 @@
         <% when :chewtoy %>
           <span>Walltaker Engine</span>
           <ion-icon name="car-sport"></ion-icon>
+        <% when :xenofluff %>
+          <span>Walltaker eXPerience</span>
+          <ion-icon name="terminal-outline"></ion-icon>
         <% when :unknown %>
           <ion-icon role="presentation" name="help-circle-outline"></ion-icon>
         <% end %>
