Didn't sync changes beforehand, readded kem's walltaker

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -158,6 +158,9 @@
         <% when :chewtoy %>
           <span>Walltaker Engine</span>
           <ion-icon name="car-sport"></ion-icon>
+        <% when :kemkem_userscript %>
+          <span>Walltaker For Walltaker</span>
+          <ion-icon role="presentation" name="sync-circle-outline"></ion-icon>
         <% when :xenofluff %>
           <span>Walltaker eXPerience</span>
           <ion-icon name="terminal-outline"></ion-icon>
