--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,7 +92,7 @@
         </div>
       </dialog>
 
-      <ion-icon name="logo-discord"></ion-icon>
+      <ion-icon name="logo-discord" class="big"></ion-icon>
       Join our Discord</div>
     <%= render 'layouts/mascot_picker' if current_user %>
   </div>
