--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -14,6 +14,7 @@
   jberliner: :desktop,
   chewtoy: :desktop,
   kemkem_userscript: :desktop,
+  xenofluff: :desktop,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
