--- a/public/user-profile.css
+++ b/public/user-profile.css
@@ -213,3 +213,35 @@ h2.with-chart {
 h2.with-chart #chart-1 {
     transform: translateY(7px);
 }
+
+.kink_tools {
+    font-size: 0.9rem;
+}
+
+.kinks {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.kink {
+    display: flex;
+    gap: 0.25rem;
+    align-items: center;
+    background: var(--accent);
+    color: var(--bg);
+    border-radius: 6px;
+}
+
+.kink > a {
+    color: inherit;
+    display: block;
+    padding-left: 0.5rem;
+}
+
+.kink button {
+    margin: 0;
+    padding: 0 0.5rem;
+    aspect-ratio: 1 / 1;
+    font-size: 1.2rem;
+}
