Better validation rules + ui

--- a/app/views/kink/remove.html.erb
+++ b/app/views/kink/remove.html.erb
@@ -1,2 +1,3 @@
-<h1>Kink#remove</h1>
-<p>Find me in app/views/kink/remove.html.erb</p>
+<%= turbo_frame_tag @kink do %>
+  <%= turbo_stream.remove @kink %>
+<% end %>
