--- a/app/views/kink/_kink.html.erb
+++ b/app/views/kink/_kink.html.erb
@@ -1,10 +1,10 @@
 <%# locals: (kink:) -%>
 
-<div class="kink">
-  <%= link_to '/' do %>
+<%= turbo_frame_tag kink, class: "kink" do %>
+  <%= link_to '/', target: '_top' do %>
     <%= kink.name %>
   <% end %>
   <%= button_to kink_remove_path(kink), method: :delete do %>
-    <ion-icon name="close"></ion-icon>
+    <ion-icon name="trash"></ion-icon>
   <% end %>
-</div>
+<% end %>
