--- a/app/views/kink/_kinks.html.erb
+++ b/app/views/kink/_kinks.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (kinks:) -%>
 
-<div class="kinks">
+<%= turbo_frame_tag :kink_list do %>
   <% kinks.each do |kink| %>
     <%= render 'kink', kink: %>
   <% end %>
-</div>
+<% end %>
