--- a/app/views/kink/users_kinks.html.erb
+++ b/app/views/kink/users_kinks.html.erb
@@ -1,7 +1,9 @@
 <%= turbo_frame_tag :kink_tools do %>
   <div class="kink_tools">
-    <%= render 'kinks', kinks: @kinks %>
+    <div class="kinks">
+      <%= render 'kinks', kinks: @kinks %>
 
-    <%= render 'form', kink: Kink.new if @is_current_user %>
+      <%= render 'form', kink: Kink.new if @is_current_user %>
+    </div>
   </div>
 <% end %>
