--- a/public/user-profile.css
+++ b/public/user-profile.css
@@ -215,7 +215,8 @@ h2.with-chart #chart-1 {
 }
 
 .kink_tools {
-    font-size: 0.9rem;;
+    font-size: 0.9rem;
+    margin-top: 1rem;
 }
 
 .kink_form {
@@ -240,18 +241,18 @@ h2.with-chart #chart-1 {
 .kink,
 .kink_form {
     display: flex;
-    gap: 0.25rem;
     align-items: center;
     background: var(--accent);
     color: var(--bg);
     border-radius: 6px;
+    min-height: 30px;
 }
 
 .kink > a {
     color: inherit;
     display: block;
     padding-left: 0.5rem;
-    padding-right: 0.25rem;
+    padding-right: 0.5rem;
 }
 
 .kink > form {
