--- a/app/views/kink/_kink.html.erb
+++ b/app/views/kink/_kink.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (kink:, is_current_user: false) -%>
 
 <%= turbo_frame_tag kink, class: "kink" do %>
-  <%= link_to '/', target: '_top' do %>
+  <%= link_to kink_show_path(kink), target: '_top' do %>
     <%= kink.name %>
   <% end %>
 
