--- a/public/base.css
+++ b/public/base.css
@@ -341,6 +341,7 @@ h4 {
 h4 + p {
     margin: 0 auto 2rem auto;
     max-width: 320px;
+    text-align: justify;
 }
 
 strong {
@@ -775,6 +776,16 @@ a.small:hover {
     opacity: 0.75;
 }
 
+.big-charm {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 110px;
+    opacity: 0.25;
+    color: var(--accent);
+    z-index: -1;
+}
+
 .accent-block--warning {
     background-image: linear-gradient(45deg, #ffb300 25%, #d0a536 25%, #d0a536 50%, #ffb300 50%, #ffb300 75%, #d0a536 75%, #d0a536 100%);
     background-size: 56.57px 56.57px;
@@ -960,7 +971,8 @@ footer small a {
     gap: 0.5rem;
 }
 
-.modal__buttons > a {
+.modal__buttons > a,
+.button-like {
     border: none;
     border-radius: 5px;
     background: var(--bg);
@@ -971,6 +983,11 @@ footer small a {
 
 .modal__buttons > a:hover {
     color: var(--text-light);
+}
+
+.button-like {
+    display: inline-block;
+    border: 1px solid var(--accent);
 }
 
 @media screen and (max-width: 475px) {
