Restricting links to kinks now works

--- a/app/views/kink/_kinks.html.erb
+++ b/app/views/kink/_kinks.html.erb
@@ -2,6 +2,6 @@
 
 <%= turbo_frame_tag :kink_list do %>
   <% kinks.each do |kink| %>
-    <%= render 'kink', kink:, is_current_user: %>
+    <%= render 'kink/kink', kink:, is_current_user: %>
   <% end %>
 <% end %>
