Add id to icon here

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,10 @@
   <%= javascript_importmap_tags %>
 </head>
 
-
 <body>
 <header>
   <div class="header__age-warning">
-    🔞 This is an app for adults over the age of 18 only.
+    <span id="age-warning__icon">🔞</span> This is an app for adults over the age of 18 only.
   </div>
   <div class="header__inner">
     <h1>
