--- a/app/views/kink/_kink.html.erb
+++ b/app/views/kink/_kink.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (kink:, is_current_user: false) -%>
 
-<%= turbo_frame_tag kink, class: "kink" do %>
+<%= turbo_frame_tag kink, class: ("kink #{kink.works_on_e621? ? 'valid' : 'untested'}") do %>
   <%= link_to kink_show_path(kink), target: '_top' do %>
     <%= kink.name %>
   <% end %>
