--- a/app/views/kink/show.html.erb
+++ b/app/views/kink/show.html.erb
@@ -5,10 +5,7 @@
     <%= link_to "Back", :back %>
   </div>
   <div class="right">
-    <%= link_to "https://e621.net/posts?tags=#{@kink.name}", target: '_blanks', class: 'no-underline' do %>
-      <ion-icon role="presentation" name="arrow-redo"></ion-icon>
-      e621
-    <% end %>
+    <%= render 'kink/e621_status', kink: @kink %>
 
     <%= button_to search_path, method: :get, params: {q: "!#{@kink.name}"} do %>
       <ion-icon role="presentation" name="search-sharp"></ion-icon>
