--- a/public/user-profile.css
+++ b/public/user-profile.css
@@ -243,10 +243,19 @@ h2.with-chart #chart-1 {
 .kink_form {
     display: flex;
     align-items: center;
-    background: var(--accent);
-    color: var(--bg);
     border-radius: 6px;
     min-height: 30px;
+}
+
+.kink.valid,
+.kink_form {
+    background: var(--accent);
+    color: var(--bg);
+}
+
+.kink.untested {
+    background: var(--accent-bg);
+    color: var(--accent);
 }
 
 .kink > a {
@@ -258,6 +267,10 @@ h2.with-chart #chart-1 {
 
 .kink > form {
     display: contents;
+}
+
+.kink.untested button {
+    border: none;
 }
 
 .kink button {
@@ -280,6 +293,10 @@ h2.with-chart #chart-1 {
     aspect-ratio: 1 / 1;
     font-size: 1.2rem;
     width: initial !important;
+}
+
+.kink__status {
+    display: contents;
 }
 
 .user_segments {
