Updated most help images Converted explorer client list to table Added min versions for clients

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -17,8 +17,8 @@
   <div>
     <p>
       Firstly, <strong>you will need an account.</strong> You can make an account by pressing the
-      <span class="mock-link">Sign Up</span> link in the top-right-hand side of the screen, in the header. Once you have
-      an account (which should only take 1 minute) return to this page. You must be logged in to continue.
+      <span class="mock-link">Sign Up</span> link in the top-right-hand side of the screen. Once you have created
+      an account (which should only take a minute) return to this page. You must be logged in to continue.
     </p>
   </div>
 
@@ -70,8 +70,7 @@
              <p>
              Once you have achieved the silver trophy (by having set 300 wallpapers to other users) then you will be able to set a custom URL. 
              This means that in addition to your regular walltaker link URL (<code>https://walltaker.joi.how/links/1</code>), you can provide your own
-             text for a custom url. It will also be accessible as <strong>https://walltaker.joi.how/links/
-             <mark>your-text-here</mark>
+             text for a custom url. It will also be accessible as <strong>https://walltaker.joi.how/links/ <mark>your-text-here</mark>
            </strong>
            </p>
              <h5>#3 Never Expires</h5>
@@ -158,63 +157,63 @@
       You can download a client for which ever device you'd like to use. Follow the instructions for each one for how to
       install it, then return to this tutorial.
     </p>
-    <table>
-      <thead>
-      <tr>
-        <th>Client</th>
-        <th>Platform</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td><a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
-          Client</a></td>
-        <td><a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a></td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker Engine</a>
-        </td>
-        <td>Windows</td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a></td>
-        <td>Android</td>
-      </tr>
-      <tr>
-        <td><a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a></td>
-        <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a></td>
-        <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
-      </tr>
-      <tr>
-        <td><a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a></td>
-        <td>Linux</td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">MacOS Client</a></td>
-        <td>macOS</td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a></td>
-        <td>iOS</td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank" style="color: var(--text-light)">Android
-          Client</a>
-          <br/><strong>Unmaintained</strong> try other clients first.</td>
-        <td>Android 12+</td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank" style="color: var(--text-light)">Desktop
-          Client</a>
-          <br/><strong>Unmaintained</strong> try other clients first.
-        </td>
-        <td>Windows / Linux</td>
-      </tr>
-      </tbody>
-    </table>
+   <table>
+  <thead>
+  <tr>
+    <th>Client</th>
+    <th>Platform</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td><a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
+      Client</a></td>
+    <td><a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker Engine</a>
+    </td>
+    <td>Windows</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a></td>
+    <td>Android 7+</td>
+  </tr>
+  <tr>
+    <td><a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a></td>
+    <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a></td>
+    <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a></td>
+    <td>Linux</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">macOS Client</a></td>
+    <td>macOS</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a></td>
+    <td>iOS</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank" style="color: var(--text-light)">Android
+      Client</a>
+      <strong>(Unmaintained)</strong>
+    <td>Android 12+</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank" style="color: var(--text-light)">Desktop
+      Client</a>
+      <strong>(Unmaintained)</strong>
+    </td>
+    <td>Windows / Linux</td>
+  </tr>
+  </tbody>
+</table>
 
     <div class="then">Then...</div>
 
@@ -263,7 +262,6 @@
     </ul>
 
     <div class="then">Then...</div>
-
     <p>
       Follow the instructions for your client to add this link to it. Normally it's in a menu where you can simply type
       in the link ID.
