Re-added try maintained clients message

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -167,6 +167,7 @@
   </tr>
   </tbody>
 </table>
+Please try using clients that are still being maintained before trying unmaintained clients.
 
 <h2 id="extra-apps">Companion/Explorer Apps</h2>
 <p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user experience cleaner.</p>
