--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -214,6 +214,7 @@
   </tr>
   </tbody>
 </table>
+Please try using clients that are still being maintained before trying unmaintained clients.
 
     <div class="then">Then...</div>
 
