Added basic FAQ page + added default tag to prevent flash searches

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -339,59 +339,13 @@ Please try using clients that are still being maintained before trying unmaintai
   </div>
 </section>
 
-<section id="bad-wallpaper">
-  <h3><small>Q:</small> I got a wallpaper I don't like.</h3>
-  <p>
-    <small>A:</small>
-    Walltaker is an app for letting others change your wallpaper, <strong>without</strong> your
-    approval. While I provide as many tools as possible to ensure you only get wallpapers you like, know that the point
-    of this app is to be <strong>out of control</strong> to some extent. Here are some tips to use Walltaker's filtering
-    features to their fullest:
-  </p>
-  <ul>
-    <li><strong>Add people you trust as friends,</strong> this allows you to use
-      <ion-icon role="presentation" name="document-lock"></ion-icon>
-      friends-only links, which stops anon spam. This is by far the most effective route.
-    </li>
-    <li><strong>Use a theme tag.</strong> A theme tag allows you to force a tag to be present on wallpapers people pick
-      for you. This can normally be good at filtering out things like genitalia (penis) you don't want to see or forcing a
-      specific sexuality. (male/female)
-    </li>
-    <li><strong>Fill out your blacklist honestly.</strong> If you don't like <em>most</em> foot-fetish art, then it
-      should be in your blacklist, even if there's some art you do like. People don't read your link terms enough to understand nuance.
-    </li>
-    <li>
-    <strong>Be clear in your terms.</strong> A lot of bad wallpapers are simply mistakes. Use as few words as possible to express what you want.
-    </li>
-  </ul>
-  <p>
-    As always, if you think you're being harassed, contact an admin on the discord (See link in the header) who can
-    look into it for you, and will IP ban an anon user if they're trying to be malicious.
-  </p>
-</section>
-
-<section id="make-your-own-client">
-  <h3><small>Q:</small> Can I make my own client?</h3>
-  <p>
-    <small>A:</small>
-    Yes! I have some API documentation on our <a href="https://github.com/pupgray/walltaker" target="_blank">GitHub.</a> You can contact
-    an admin on discord to get it listed on the site. Here's some tips for what makes a good client:
-  </p>
-  <ul>
-    <li>
-      <strong>It doesn't just have to be wallpapers!</strong> iOS has no native APIs for setting lock screen or home
-      screen wallpapers. Maybe a good idea would be a home screen widget that could show the current wallpaper instead?
-    </li>
-    <li>
-      <strong>Just because we're short-polling, doesn't mean you can ping us as fast as you want!</strong> Please keep
-      requests at around 1 request per 10 seconds. This service is hosted at my expensive, and heavy load will mean I have
-      to vertically scale up the server it lives on. Don't be an asshole.
-    </li>
-    <li>
-      <strong>Use native APIs to set the wallpaper if available.</strong> A good example of why this is a good idea is
-      the MacOS client. It uses the Cocoa APIs to affect the wallpaper instead of using the more-universal apple-script
-      solution common in apps not made with swift/obj-c. This is MUCH less buggy way to assign wallpapers, and doesn't
-      require as many permissions. Research if there's an SDK/language you should use to better take advantage of native APIs.
-    </li>
-  </ul>
+<section id="FAQs">
+  <h4 id="Bad Wallpaper">FAQs</h4>
+  <div class="accordion" data-controller="accordion">
+  <section id="uifix">
+  <br> 
+    To view some recently asked questions, check out  <%= link_to 'FAQs', faq_path %>
+  </section>
+  <br>
+  </div>
 </section>
