--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,7 +107,8 @@
     Want more horny debauchery? Try <a href="https://joi.how">joi.how</a>.<br/>
     Horny lizards Warren, Taylor, and Ki conceived of and drawn by
     <a href="https://www.furaffinity.net/user/cherryzbun/" target=_blank>CherryzBun</a><br/>
-    <%= link_to 'Need help with Walltaker?', help_path %>
+    <%= link_to 'Need help with Walltaker?', help_path %> &nbsp
+    <%= link_to 'FAQs', faq_path %>
   </p>
   <small>
     © joi.how 2024 / Commit
