--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:html_title) { "#{@user.username} settings" } %>
+
+<h2><%= @user.username %>'s setting page</h2>
+
 <%= turbo_frame_tag 'settings', target: '_top' do %>
   <div class="accent-block">
     <div class="accent-block__charm">
