--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <%= current_user.username %>
         </a>
         <p>&nbsp</p>
-        <%= link_to 'settings' do %>
+        <%= link_to '/settings' do %>
             <ion-icon name="cog" class="dont-hide chat"></ion-icon>
           <% end %>
         </div>
