--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -131,7 +131,7 @@
     <td>Windows</td>
   </tr>
   <tr>
-    <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a></td>
+    <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gios' Client</a></td>
     <td>Android</td>
   </tr>
   <tr>
@@ -173,7 +173,7 @@
 <h2 id="extra-apps">Companion/Explorer Apps</h2>
 <p>Extra tools that tie into Walltaker's site. These should help to integrate walltaker better or make the user experience cleaner.</p>
 <ul>
-  <li><a href="https://github.com/gios2/Walltaker-Explorer/releases/latest" target="_blank">Gio's Explorer</a> (Android)
+  <li><a href="https://github.com/gios2/Walltaker-Explorer/releases/latest" target="_blank">Gios' Explorer</a> (Android)
   </li>
 </ul>
 
