--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -177,7 +177,7 @@
         <td>Windows</td>
       </tr>
       <tr>
-        <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gio's Client</a></td>
+        <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gios' Client</a></td>
         <td>Android</td>
       </tr>
       <tr>
