--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="field checkbox">
     <%= check_box_tag :keep_me_logged_in %>
-    <<%= label_tag 'Keep me logged in for 2 weeks' %>
+    <%= label_tag 'Keep me logged in for 2 weeks' %>
   </div>
   <%= submit_tag 'Log In' %>
   <br/>
