--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -10,14 +10,14 @@
   <p>
     <small>A:</small>
     Thanks for being willing to give Walltaker a try! It's pretty easy to get started, but it might seem a bit weird at
-    first since there's some hoops we have to jump thru to be able to update your wallpaper.
+    first since there are some hoops we have to jump through to be able to update your wallpaper.
   </p>
 
   <h4 id="getting-started-log-in">0. Log in</h4>
   <div>
     <p>
       Firstly, <strong>you will need an account.</strong> You can make an account by pressing the
-      <span class="mock-link">Sign Up</span> link in the top-right-hand side of the screen. Once you have created
+      <span class="mock-link">Sign Up</span> link on the top-right-hand side of the screen. Once you have created
       an account (which should only take a minute) return to this page. You must be logged in to continue.
     </p>
   </div>
@@ -60,80 +60,92 @@
             Toggle options explanation
           </button>
           <div class="accordion__content" data-accordion-target="content" id="options-explanation" aria-label="Explanation of options shown in Link Form">
-          <h5>#1 Terms</h5>
-          <p>
-            Your link terms are simply an area to express what you'd like to see as wallpapers more generally. Nothing
-            here is enforced, it's just a text field for you to leave a note that appears on the link. I suggest you
-            outline what things turn you on here.
-          </p>
-             <h5>#2 Custom URL</h5>
-             <p>
-             Once you have achieved the silver trophy (by having set 300 wallpapers to other users) then you will be able to set a custom URL. 
-             This means that in addition to your regular walltaker link URL (<code>https://walltaker.joi.how/links/1</code>), you can provide your own
-             text for a custom url. It will also be accessible as <strong>https://walltaker.joi.how/links/ <mark>your-text-here</mark>
-           </strong>
-           </p>
-             <h5>#3 Never Expires</h5>
-          <p>
-            Ensures that the link will never expire, and people you allow to set the link will be able to do so until you delete it.
-          </p>
-          <blockquote>
-            <strong>
-              <ion-icon role="presentation" name="checkbox-outline"></ion-icon>
-              When checked,</strong> this link will never expire, and the #4 Expires option will be ignored.<br/>
-            <strong>
-              <ion-icon role="presentation" name="square-outline"></ion-icon>
-              When unchecked,</strong> this link will expire at the date indicated by the #4 Expires option.
-          </blockquote>
-          ⚠️ With an expired link, Pornbot and the Pornlizards will still be able to set your wallpaper and you will still be able to connect a client.
-          <h5>#5 Friends Only</h5>
-          <p>
-            This restricts who can set wallpapers on this link.
-          </p>
-          <blockquote>
-            <strong>
-              <ion-icon role="presentation" name="checkbox-outline"></ion-icon>
-              When checked,</strong> ONLY people you have accepted friend requests with will be able to see and set your wallpaper.<br/>
-            <strong>
-            <ion-icon role="presentation" name="square-outline"></ion-icon>
-              When unchecked,</strong> ANYONE (including anon users) will be able to see and set your wallpaper.
-          </blockquote>
-          <h5>#6 Blacklist</h5>
-          <p>
-            A list of E621 tags that must NOT appear on wallpapers people submit.
-            <strong>Tags are separated by spaces or commas.</strong> 
-          </p>
-          <blockquote>
-            <strong>female feral feline</strong> will prevent any posts with females presenting characters, feral
-            characters, or felines.<br/>
-            <strong>male/male group_sex solo</strong> will mean you only get extremely boring, straight, 1-on-1 porn. You weirdo.
-          </blockquote>
-          <h5>#7 Theme Tag</h5>
-          <p>
-            Theme tags are special! This is a way to enforce all wallpapers submitted to this link to be tagged with a
-            single, specific tag of your choosing. Use this when you're looking for something specific, like a specific
-            species or sex act. You're horny, you'll come up with something fun.
-            <strong>Be careful about how you type your tag in here.</strong> If you misspell this theme tag, no one will be
-            able to submit anything until you remove it or correct the spelling. Confirm spelling on E621 if you have to. Filter tags cannot be used.
-          </p>
-          <blockquote>
-            <strong>
-              <ion-icon role="presentation" name="checkmark-outline"></ion-icon>
-              loimu_(character)</strong> all posts will feature Loimu 🦌. Any other characters are blocked.<br/>
-            <strong>
-              <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
-              pokeemon</strong> a missspelled tag! No one will be able to submit anything.<br/>
-            <strong>
-              <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
-              tits</strong> an alias tag! While this works in e621 search, the real tag is "breasts", so this is the
-            same as misspelling a tag.<br/>
-            <strong>
-            <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
-            rating:e</strong> a filter tag! While this works in e621 search, filter tags are unsupported when setting a theme.
+            <h5>#1 Terms</h5>
+            <p>
+              Your link terms are simply an area to express what you'd like to see as wallpapers more generally. Nothing
+              here is enforced, it's just a text field for you to leave a note that appears on the link. I suggest you
+              outline what things turn you on here.
+            </p>
+            <h5>#2 Custom URL</h5>
+            <p>
+              Once you have achieved the silver trophy (by having set 300 wallpapers to other users), then you will be
+              able to set a custom URL.
+              This means that in addition to your regular walltaker link URL
+              (<code>https://walltaker.joi.how/links/1</code>), you can provide your own
+              text for a custom url. It will also be accessible as <strong>https://walltaker.joi.how/links/
+              <mark>your-text-here</mark>
+            </strong>
+            </p>
+            <h5>#3 Never Expires</h5>
+            <p>
+              Ensures that the link will never expire, and people you allow to set the link will be able to do so until
+              you delete it.
+            </p>
+            <blockquote>
+              <strong>
+                <ion-icon role="presentation" name="checkbox-outline"></ion-icon>
+                When checked,</strong> this link will never expire, and the #4 Expires option will be ignored.<br/>
+              <strong>
+                <ion-icon role="presentation" name="square-outline"></ion-icon>
+                When unchecked,</strong> this link will expire at the date indicated by the #4 Expires option.
+            </blockquote>
+            ⚠️ With an expired link, Pornbot and the Pornlizards will still be able to set your wallpaper and you will
+            still be able to connect a client.
+            <h5>#5 Friends Only</h5>
+            <p>
+              This restricts who can set wallpapers on this link.
+            </p>
+            <blockquote>
+              <strong>
+                <ion-icon role="presentation" name="checkbox-outline"></ion-icon>
+                When checked,</strong> ONLY people you have accepted friend requests with will be able to see and set
+              your wallpaper.<br/>
+              <strong>
+                <ion-icon role="presentation" name="square-outline"></ion-icon>
+                When unchecked,</strong> ANYONE (including anon users) will be able to see and set your wallpaper.
+            </blockquote>
+            <h5>#6 Blacklist</h5>
+            <p>
+              A list of E621 tags that must NOT appear on wallpapers people submit.
+              <strong>Tags are separated by spaces or commas.</strong>
+            </p>
+            <blockquote>
+              <strong>female feral feline</strong> will prevent any posts with females presenting characters, feral
+              characters, or felines.<br/>
+              <strong>male/male group_sex solo</strong> will mean you only get extremely boring, straight, 1-on-1 porn.
+              You weirdo.
+            </blockquote>
+            <h5>#7 Theme Tag</h5>
+            <p>
+              Theme tags are special! This is a way to enforce all wallpapers submitted to this link to be tagged with a
+              single, specific tag of your choosing. Use this when you're looking for something specific, like a
+              specific
+              species or sex act. You're horny, you'll come up with something fun.
+              <strong>Be careful about how you type your tag in here.</strong> If you misspell this theme tag, no one
+              will be
+              able to submit anything until you remove it or correct the spelling. Confirm spelling on E621 if you have
+              to. Filter tags cannot be used.
+            </p>
+            <blockquote>
+              <strong>
+                <ion-icon role="presentation" name="checkmark-outline"></ion-icon>
+                loimu_(character)</strong> all posts will feature Loimu 🦌. Any other characters are blocked.<br/>
+              <strong>
+                <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
+                pokémon</strong> a misspelled tag! No one will be able to submit anything.<br/>
+              <strong>
+                <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
+                tits</strong> an alias tag! While this works in e621 search, the real tag is "breasts", so this is the
+              same as misspelling a tag.<br/>
+              <strong>
+                <ion-icon role="presentation" name="hand-left-outline"></ion-icon>
+                rating:e</strong> a filter tag! While this works in e621 search, filter tags are unsupported when
+              setting a theme.
+            </blockquote>
+          </div>
         </div>
-      </div>
-    </li>
-  </ul>
+      </li>
+    </ul>
 
     <div class="then">Then...</div>
 
@@ -148,73 +160,81 @@
   <div>
     <p>
       Congratulations! You should have a fresh link ready to share with the world. However, it currently doesn't change
-      the wallpaper on anything. This is because, as simply a website, Walltaker can not change your wallpaper for you.
-      To allow us to do this, <strong>we need a Walltaker Client, which is an app you can install on which ever devices you'd
-      like to get wallpaper updates on.</strong> It will silently check your link every few seconds, and update your
+      the wallpaper on anything. This is because, as simply a website, Walltaker cannot change your wallpaper for you.
+      To allow us to do this,
+      <strong>we need a Walltaker Client, which is an app you can install on which ever devices you'd
+        like to get wallpaper updates on.</strong> It will silently check your link every few seconds, and update your
       wallpaper if there's someone has updated your wallpaper, automatically.
     </p>
     <p>
       You can download a client for which ever device you'd like to use. Follow the instructions for each one for how to
       install it, then return to this tutorial.
     </p>
-   <table>
-  <thead>
-  <tr>
-    <th>Client</th>
-    <th>Platform</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td><a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
-      Client</a></td>
-    <td><a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker Engine</a>
-    </td>
-    <td>Windows</td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gios' Client</a></td>
-    <td>Android 7+</td>
-  </tr>
-  <tr>
-    <td><a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a></td>
-    <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a></td>
-    <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a></td>
-    <td>Linux</td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">macOS Client</a></td>
-    <td>macOS</td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a></td>
-    <td>iOS</td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank" style="color: var(--text-light)">Android
-      Client</a>
-      <strong>(Unmaintained)</strong>
-    <td>Android 12+</td>
-  </tr>
-  <tr>
-    <td><a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank" style="color: var(--text-light)">Desktop
-      Client</a>
-      <strong>(Unmaintained)</strong>
-    </td>
-    <td>Windows / Linux</td>
-  </tr>
-  </tbody>
-</table>
-Please try using clients that are still being maintained before trying unmaintained clients.
+    <table>
+      <thead>
+      <tr>
+        <th>Client</th>
+        <th>Platform</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>
+          <a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
+            Client</a></td>
+        <td><a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/dogkisser/walltaker-engine/releases" target="_blank">Chewtoy's Walltaker
+          Engine</a>
+        </td>
+        <td>Windows</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/gios2/Walltaker-Changer/releases/latest" target="_blank">Gios' Client</a></td>
+        <td>Android 7+</td>
+      </tr>
+      <tr>
+        <td><a href="https://llamalab.com/automate/community/flows/46470" target="_blank">Arson's Automate Client</a>
+        </td>
+        <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a>
+        </td>
+        <td><a href="https://llamalab.com/automate/">Automate App for Android</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://gitlab.com/JBerliner/walltaker-client" target="_blank">JBerliner's Walltaker.sh</a></td>
+        <td>Linux</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">macOS Client</a></td>
+        <td>macOS</td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/PawCorp/walltaker/blob/main/ios.md#ios-widget" target="_blank">iOS Widget</a>
+        </td>
+        <td>iOS</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank" style="color: var(--text-light)">Android
+            Client</a>
+          <strong>(Unmaintained)</strong>
+        <td>Android 12+</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank" style="color: var(--text-light)">Desktop
+            Client</a>
+          <strong>(Unmaintained)</strong>
+        </td>
+        <td>Windows / Linux</td>
+      </tr>
+      </tbody>
+    </table>
+    Please try using clients that are still being maintained before trying unmaintained clients.
 
     <div class="then">Then...</div>
 
@@ -342,10 +362,10 @@ Please try using clients that are still being maintained before trying unmaintai
 <section id="FAQs">
   <h4 id="Bad Wallpaper">FAQs</h4>
   <div class="accordion" data-controller="accordion">
-  <section id="uifix">
-  <br> 
-    To view some recently asked questions, check out  <%= link_to 'FAQs', faq_path %>
-  </section>
-  <br>
+    <section id="uifix">
+      <br>
+      To view some recently asked questions, check out  <%= link_to 'FAQs', faq_path %>
+    </section>
+    <br>
   </div>
 </section>
